<resources>
    <string name="app_name">MovieApps</string>
    <string name="image_view_description">ImageView show Poster</string>
    <string name="tv_title">Movie Title</string>
    <string name="tv_release_date">2020 - 02 - 06</string>
    <string name="tv_overview">Lorem Ipsum Dolor Sit Amet Bohcap Mehikupinktos</string>
    <string name="on_failed">Failed Load Data</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="overview">Overview</string>
    <string name="action_to_favorite">action to favorite</string>
    <string name="remove_favorite">Remove From Favorite</string>
    <string name="add_favorite">Add To Favorite</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="tv_null">there are no favorites yet</string>
    <string name="tv_review">this is review this is review this is review this is review this is review this is review</string>
    <string name="tv_author">SWITCH</string>
    <string name="reviews">Reviews</string>
    <string name="tv_no_review">there are no reviews yet</string>
    <string name="author">Author</string>

    <string-array name="value">
        <item>Popular</item>
        <item>Upcoming</item>
        <item>Top Rated</item>
        <item>Now Playing</item>
    </string-array>
</resources>
