<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            tools:src="@drawable/iv_example"
            android:contentDescription="@string/image_view_description" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_poster"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/iv_poster"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/tv_title"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_below="@id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_poster"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_poster"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            tools:text="@string/tv_release_date"
            />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_below="@id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_toEndOf="@id/iv_poster"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_poster"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            tools:text="@string/tv_overview"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>